crates/formatter/tests/snapshots/snapshots__migrations__000399_template_version_presets_last_invalidated_at.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table template_version_presets add column last_invalidated_at timestamptz;
