crates/formatter/tests/snapshots/snapshots__migrations__000403_workspaces_expanded_acl_actor_info.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view workspaces_expanded;

-- Expand more by including group_acl_display_info and
-- user_acl_display_info columns with the actors' name and avatar.
create view workspaces_expanded as
select
	workspaces.id,
	workspaces.created_at,
	workspaces.updated_at,
	workspaces.owner_id,
	workspaces.organization_id,
	workspaces.template_id,
	workspaces.deleted,
	workspaces.name,
	workspaces.autostart_schedule,
	workspaces.ttl,
	workspaces.last_used_at,
	workspaces.dormant_at,
	workspaces.deleting_at,
	workspaces.automatic_updates,
	workspaces.favorite,
	workspaces.next_start_at,
	workspaces.group_acl,
	workspaces.user_acl,
	visible_users.avatar_url as owner_avatar_url,
	visible_users.username as owner_username,
	visible_users.name as owner_name,
	organizations.name as organization_name,
	organizations.display_name as organization_display_name,
	organizations.icon as organization_icon,
	organizations.description as organization_description,
	templates.name as template_name,
	templates.display_name as template_display_name,
	templates.icon as template_icon,
	templates.description as template_description,
	tasks.id as task_id,
	-- Workspace ACL actors' display info
	COALESCE(
		(
			select
				jsonb_object_agg(
					acl.key,
					jsonb_build_object(
						'name',
						COALESCE(g.name, ''),
						'avatar_url',
						COALESCE(g.avatar_url, '')
					)
				)
			from
				jsonb_each(workspaces.group_acl) as acl
				left join groups g on g.id = acl.key::uuid
		),
		'{}'::jsonb
	) as group_acl_display_info,
	COALESCE(
		(
			select
				jsonb_object_agg(
					acl.key,
					jsonb_build_object(
						'name',
						COALESCE(vu.name, ''),
						'avatar_url',
						COALESCE(vu.avatar_url, '')
					)
				)
			from
				jsonb_each(workspaces.user_acl) as acl
				left join visible_users vu on vu.id = acl.key::uuid
		),
		'{}'::jsonb
	) as user_acl_display_info
from
	(
		(
			(
				(
					workspaces
					join visible_users on ((workspaces.owner_id = visible_users.id))
				)
				join organizations on ((workspaces.organization_id = organizations.id))
			)
			join templates on ((workspaces.template_id = templates.id))
		)
		left join tasks on ((workspaces.id = tasks.workspace_id))
	);

comment on view workspaces_expanded is 'Joins in the display name information such as username, avatar, and organization name.';
