crates/formatter/tests/snapshots/snapshots__migrations__000405_remove_experiment_terraform_workspaces.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop view template_with_names;
alter table templates
	add column use_terraform_workspace_cache bool not null default false;

create view template_with_names as
select
	templates.*,
	COALESCE(visible_users.avatar_url, ''::text) as created_by_avatar_url,
	COALESCE(visible_users.username, ''::text) as created_by_username,
	COALESCE(visible_users.name, ''::text) as created_by_name,
	COALESCE(organizations.name, ''::text) as organization_name,
	COALESCE(organizations.display_name, ''::text) as organization_display_name,
	COALESCE(organizations.icon, ''::text) as organization_icon
from (
	(
		templates
			left join visible_users on ((templates.created_by = visible_users.id))
	)
		left join organizations on ((templates.organization_id = organizations.id))
);

comment on view template_with_names is 'Joins in the display name information such as username, avatar, and organization name.';
